# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).

## [Unreleased]
### Added
- GDPR account restriction feature
- GDPR data viewing feature
- GDPR data export feature
- New API version (V2) with Doorkeeper integration
- Cron jobs for generating and cleaning up exports
- Registration form with email confirmation
- Login form
- Reset password form
- Unlock account form
- Edit account form

### Removed
- Google login in favor of a regular login and registration form

## [3.1.0] - 2018-01-10
### Added
- Receive notifications in the ₭udo-o-Mobile app when you receive ₭udos
- Receive notifications in the ₭udo-o-Mobile app when a ₭udo goal is reached
- Receive a weekly ₭udo reminder in the ₭udo-o-Mobile app
- REST API functionality for retrieving ₭udo-o-Matic usage statistics and historical data

### Changed
- Made ₭udo-o-Matic notifications less obtrusive in the Slack feed
- Fixed several Slack-related bugs and improved stability

## [3.0.0] - 2017-12-04
### Added
- Receive email when you receive Kudos
- Receive email when a Kudo goal is reached
- Receive a weekly Kudo summary email
- Receive personalized Slack notifications and reminders
- Give Kudos with the /kudo command in Slack
- Give Kudos by adding the :kudo: reactji to a message of a Kudo-o-Matic user in Slack
- Like Kudo transactions using the like button in Slack
- Settings page for connecting with Slack and configuring mail preferences
- Single Kudo transaction page, used for sharing transactions by URL
- Button on the homepage for navigating back to the top
- User deactivation system
- Implemented checks that prevent removing important data entries
- REST API for the upcoming Kudo-o-Mobile app
- Asynchronous image uploads and Slack communication

## [2.0.1] - 2017-07-15
### Changed