@@ -8,6 +8,10 @@ class Api::V2::ApiController < JSONAPI::ResourceController
     current_resource_owner
   end
 
+  def current_team
+    @current_team ||= Team.find(request.headers['Team'])
+  end
+
   private
 
   def doorkeeper_unauthorized_render_options(error: nil)
@@ -22,9 +26,7 @@ class Api::V2::ApiController < JSONAPI::ResourceController
     request.format = :json
   end
 
-  def set_current_team
-    @current_team_id = request.headers["Team"]
-  end
+
 
   def current_resource_owner
     User.find(doorkeeper_token.resource_owner_id) if
