@@ -1,17 +1,22 @@
+# frozen_string_literal: true
 class ApplicationController < ActionController::Base
   protect_from_forgery with: :exception
   before_action :authenticate_user!
   before_action :configure_permitted_parameters, if: :devise_controller?
+  helper_method :current_team
 
   def new_session_path(scope)
     new_user_session_path
   end
 
-  def set_team_and_check_membership
-    @current_team = Team.find_by_slug!(params[:tenant])
-    unless @current_team.member?(current_user)
+  def check_team_membership
+    unless current_team.member?(current_user)
       render 'teams/access_denied', status: 403
     end
+  end
+
+  def current_team
+    @current_team ||= request.headers['Team'] || Team.find_by_slug!(params[:tenant])
   end
 
   protected
