@@ -5,7 +5,7 @@
     .filter-button
       %button.btn.btn-secondary.btn-filter
         All transactions
-      .filter-content{'data-tenant': @current_team.slug}
+      .filter-content{'data-tenant': current_team.slug}
         .menu-tooltip
         %a.menu-content.all-transactions{href:"#"}
           All transactions
