@@ -1,4 +1,4 @@
-= link_to unlike_path(id: transaction.id, tenant: @current_team.slug), remote: true, method: :post, class: 'downvote-transaction' do
+= link_to unlike_path(id: transaction.id, tenant: current_team.slug), remote: true, method: :post, class: 'downvote-transaction' do
   .btn.btn-primary.btn-like{id: "unlike-#{transaction.id}"}
     .fa.fa-thumbs-up
     Liked!
